# PlausiDen-AppGuard

./: .composition-baseline.json  .gitignore  BLEACHBIT_INTEGRATION.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SCOPE.md
src/: access_log.rs  alert.rs  app_inventory.rs  archiver.rs  autostart.rs  background_activity.rs  battery.rs  cert_tracker.rs  compliance.rs  data_attribution.rs  data_exfil_monitor.rs  data_flow.rs  install_tracker.rs  integrity_monitor.rs  launch_counter.rs  lib.rs  network_acl.rs  network_audit.rs  permission_audit.rs  permissions.rs  policy.rs  policy_engine.rs  process_monitor.rs  process_tree.rs  quarantine.rs  reporter.rs  resource_monitor.rs  resource_quota.rs  risk_score.rs  sandbox.rs  sandbox_evaluator.rs  sandbox_profiles.rs  telemetry_stream.rs  tracker.rs  traffic_meter.rs  uninstall_tracker.rs  update_tracker.rs  usage_stats.rs
